@@ -100,7 +100,18 @@ internal_search_find: file="NULL"
 database lookup required for select * from them where id='tab';
 PGSQL query: select * from them where id='tab';
 PGSQL using cached connection for localhost/test/CALLER
-lookup yielded: name="x x" id=tab 
+lookup yielded: name="x	x" id=tab 
+search_open: pgsql "NULL"
+  cached open
+search_find: file="NULL"
+  key="select * from them where name='''stquot';" partial=-1 affix=NULL starflags=0
+LRU list:
+internal_search_find: file="NULL"
+  type=pgsql key="select * from them where name='''stquot';"
+database lookup required for select * from them where name='''stquot';
+PGSQL query: select * from them where name='''stquot';
+PGSQL using cached connection for localhost/test/CALLER
+lookup yielded: name='stquot id=quote1 
 search_tidyup called
 close PGSQL connection: localhost/test/CALLER
 >>>>>>>>>>>>>>>> Exim pid=pppp terminating with rc=0 >>>>>>>>>>>>>>>>
